--- a/WpfMasterDetailExample/App.xaml
+++ b/WpfMasterDetailExample/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WpfMasterDetailExample.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfMasterDetailExample"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WpfMasterDetailExample">
     <Application.Resources>
          
     </Application.Resources>
